--- a/kodilla-jdbc/build.gradle
+++ b/kodilla-jdbc/build.gradle
@@ -11,5 +11,5 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.9-rc'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.13'
 }
