--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'Kodilla-Course-Project2'
 include 'Good patterns2'
 include 'kodilla-spring-intro'
 include 'kodilla-patterns'
+include 'kodilla-jdbc'
 
