--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ include 'Good patterns2'
 include 'kodilla-spring-intro'
 include 'kodilla-patterns'
 include 'kodilla-jdbc'
+include 'kodilla-sudoku'
 
